@@ -1,41 +1,4 @@
-# httpd Data BEGIN.
 
 #
-# wget-hack prevention
+# This file will be replaced by ../httpd.conf when make is executed
 #
-
-<IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteCond %{HTTP_USER_AGENT} ^LWP::Simple
-    RewriteRule ^/.* http://%{REMOTE_ADDR}/ [L,E=nolog:1]
-</IfModule>
-
-#
-# Web traffic accounting.
-#
-
-LogFormat "%B" traff
-
-#
-# mod_cband configuration
-#
-
-<IfModule mod_cband.c>
-    CBandScoreFlushPeriod 10
-    CBandRandomPulse On
-</IfModule>
-
-#
-# let the customer decide what charset he likes to use
-#
-
-AddDefaultCharset Off
-
-#
-# Header End
-#
-
-# httpd [{IP}] virtual host entry BEGIN.
-# httpd [{IP}] virtual host entry END.
-
-# httpd Data END.
