@@ -1,1 +1,84 @@
-/usr/ports/www/apache22 /usr/ports/ftp/proftpd /usr/ports/mail/postfix /usr/ports/mail/postfix-policyd-weight /usr/ports/mail/procmail /usr/ports/shells/bash /usr/ports/mail/courier-imap /usr/ports/security/courier-authlib /usr/ports/databases/mysql50-client /usr/ports/databases/mysql50-server /usr/ports/databases/p5-DBD-mysql50 /usr/ports/lang/perl5.8 /usr/ports/lang/php5 /usr/ports/lang/php5-extensions /usr/ports/www/awstats /usr/ports/www/mod_fcgid /usr/ports/www/mod_fastcgi
+=-=-=-= BASIC REQUIRED PACKAGE/PORTS =-=-=-= last update 20090102
+
+Apache 2.2.x			Web System
+	x threads		option
+	x mysql			option
+	x suexec		( Recomended )
+	+ mod_cband		for bandwitdh management
+	o mod_php		WARNING: security risk for hosting
+	+ mod_fastcgi   	( choice for improving security )
+	+ mod_fcgid     	( choice for improving security )
+	+ mod_proxy		Req for awstats
+	+ mod_proxy_http 	Reg for awstats 
+Proftpd				FTP System
+	x IPV6			IP v6 support ( but disable by ispcp )
+	x mysql			Database module
+	x quota			quota module
+	x ratio			ratio module
+	x ctrls			control module
+	- delay			Not Available in ports
+	- ctrls_admin		Not Available in ports
+Postfix				Email System
+postfix-policyd-weight  	Antispam system ( since rc7 )
+Procmail			Mail filter System
+Bash				Shell compatibility with Main Version
+courier-imap			IMAP system, please use version 4.3.x and above
+	x userdb		For use with userdb ( ispcp default )
+	x mysql			For use with mysql
+courier-pop3			IMAP POP3 system
+courier-authlib			Auth system
+	x userdb
+	x mysql
+mysql-client			Database system
+mysql-server			Database system
+Perl				=-=-=-= PERL MODULE =-=-=-=
+	+ Compress-Zlib
+	+ Crypt-Blowfish
+	+ Crypt-CBC
+	+ Crypt-DES
+	+ Crypt-PasswdMD5
+	+ Crypt-SSLeay
+	+ DBD-mysql
+	+ DBI
+	+ Digest-HMAC
+	+ Digest-SHA1
+	+ HTML-Parser
+	+ HTML-Tagset
+	+ HTTP-GHTTP
+	+ IO-stringy
+	+ MIME-tools
+	+ Mail-Tools
+	+ Net-DNS
+	+ Net-Daemon
+	+ Net-IP
+	+ Net-LibIDN
+	+ PlRPC
+	+ URI
+	+ libwww
+	+ Term-ReadPassword
+PHP				=-=-=-= PHP PACKAGE =-=-=-=
+	x apache		Build Apache module ( optional )
+	x CLI
+	x CGI			( Recommended )
+	x suhosin
+	+ fastcgi
+PHP-Extensions
+	x pcre
+	x bz2
+	x ctype
+	x curl
+	x dbx
+	x domxml
+	x filepro
+	x gd
+	x imap
+	x mcrypt
+	x mhash
+	x mysql
+	x pear
+	x shmop
+	x xmlrpc
+	x xslt
+	x session
+	x php5-pdo_mysql	Since RC6 ispcp using pdo
+awstats
