@@ -2664,11 +2664,21 @@ sub als_add_awstats_cron {
 	#
 	# Now we'll proceed system config;
 	#
-	$rs = sys_command_rs("$main::cfg{'CMD_CP'} /etc/cron.d/ispcp $backup_cfg");
-	return $rs if ($rs != 0);
+        # BSD/NUX Command
+        if ($main::cfg{'ROOT_GROUP'} eq "wheel") {
+                $rs = sys_command_rs("$main::cfg{'CMD_CP'} /var/cron/tabs/root $backup_cfg");
+        } else {
+                $rs = sys_command_rs("$main::cfg{'CMD_CP'} /etc/cron.d/ispcp $backup_cfg");
+        }
+        return $rs if ($rs != 0);
 
-	$rs = sys_command_rs("$main::cfg{'CMD_CP'} -f $working_cfg /etc/cron.d/");
-	return $rs if ($rs != 0);
+        # BSD/NUX Command
+        if ($main::cfg{'ROOT_GROUP'} eq "wheel") {
+                $rs = sys_command_rs("$main::cfg{'CMD_CRONTAB'} -u root $working_cfg");
+        } else {
+                $rs = sys_command_rs("$main::cfg{'CMD_CP'} -f $working_cfg /etc/cron.d/");
+        }
+        return $rs if ($rs != 0);
 
 	push_el(\@main::el, 'als_add_awstats_cron()', 'Ending...');
 	return 0;
@@ -2772,11 +2782,21 @@ sub als_del_awstats_cron {
 	#
 	# Now we'll proceed system config;
 	#
-	$rs = sys_command_rs("$main::cfg{'CMD_CP'} /etc/cron.d/ispcp $backup_cfg");
-	return $rs if ($rs != 0);
+        # BSD/NUX Command
+        if ($main::cfg{'ROOT_GROUP'} eq "wheel") {
+                $rs = sys_command_rs("$main::cfg{'CMD_CP'} /var/cron/tabs/root $backup_cfg");
+        } else {
+                $rs = sys_command_rs("$main::cfg{'CMD_CP'} /etc/cron.d/ispcp $backup_cfg");
+        }
+        return $rs if ($rs != 0);
 
-	$rs = sys_command_rs("$main::cfg{'CMD_CP'} -f $working_cfg /etc/cron.d/");
-	return $rs if ($rs != 0);
+        # BSD/NUX Command
+        if ($main::cfg{'ROOT_GROUP'} eq "wheel") {
+                $rs = sys_command_rs("$main::cfg{'CMD_CRONTAB'} -u root $working_cfg");
+        } else {
+                $rs = sys_command_rs("$main::cfg{'CMD_CP'} -f $working_cfg /etc/cron.d/");
+        }
+        return $rs if ($rs != 0);
 
 	push_el(\@main::el, 'als_del_awstats_cron()', 'Ending...');
 	return 0;
