@@ -2,6 +2,10 @@ ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2009-04-26 Benedikt Heintel
+	- DISTS:
+		* Fixed #1778: (FreeBSD) Add FreeBSD Patch
+
+2009-04-25 Benedikt Heintel
 	- TOOLS:
 		* Update phpMyAdmin to version 3.1.4
 
